EventHandler shouldn't dispatch fake mousemove events when scrolling on devices that don't have a mouse https://bugs.webkit.org/show_bug.cgi?id=88270

Reviewed by James Robinson.

Source/WebCore:

This patch adds a setting analogous to deviceSupportsTouch to determine
whether the device supports mouse. We then don't dispatch fake mouse
events on devices that don't have a mouse in the first place.

Test: fast/events/touch/scroll-without-mouse-lacks-mousemove-events.html

* page/EventHandler.cpp:
(WebCore::EventHandler::fakeMouseMoveEventTimerFired):
* page/Settings.cpp:
(WebCore::Settings::Settings):
* page/Settings.h:
(WebCore::Settings::setDeviceSupportsMouse):
(WebCore::Settings::deviceSupportsMouse):
(Settings):
* testing/InternalSettings.cpp:
(WebCore::InternalSettings::InternalSettings):
(WebCore::InternalSettings::restoreTo):
(WebCore::InternalSettings::setDeviceSupportsMouse):
(WebCore):
* testing/InternalSettings.h:
(InternalSettings):
* testing/InternalSettings.idl:

Source/WebKit/chromium:

* public/WebSettings.h:
* src/WebSettingsImpl.cpp:
(WebKit::WebSettingsImpl::setDeviceSupportsMouse):
(WebKit):
* src/WebSettingsImpl.h:
(WebSettingsImpl):

LayoutTests:

* fast/events/touch/scroll-without-mouse-lacks-mousemove-events-expected.txt: Added.
* fast/events/touch/scroll-without-mouse-lacks-mousemove-events.html: Added.


Canonical link: https://commits.webkit.org/106130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119465 268f45cc-cd09-0410-ab3c-d52691b4dbfc